--- a/Titanic/Titanic.ipynb
+++ b/Titanic/Titanic.ipynb
@@ -6,7 +6,7 @@
       "name": "Titanic.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNVvJLkoiEKy9q6I68H2hQS",
+      "authorship_tag": "ABX9TyMWQncekcnthUuIqCTOcIeO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +31,7 @@
         "id": "xB7MhPk6R8fY"
       },
       "source": [
-        ""
+        "The Purpose of this Kaggle Compeitition is to predict which passengers survived from the Titanic and which did not"
       ]
     },
     {
