--- a/Tweets/Tweets.ipynb
+++ b/Tweets/Tweets.ipynb
@@ -6,7 +6,7 @@
       "name": "Tweets.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPbw/4e7o5OIMDu4x6XE1E7",
+      "authorship_tag": "ABX9TyOlOvOczI8t2rquf75ikZsf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,7 +41,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rFY8i2FJ-3Nw",
-        "outputId": "8b6f8c19-ffd2-41e4-8990-fe3e20fe6796"
+        "outputId": "6777609d-0e6c-4e12-9e2a-17fef2e9c656"
       },
       "source": [
         "#Import of Libraries\n",
@@ -103,7 +103,7 @@
         "warnings.filterwarnings('ignore')\n",
         "warnings.simplefilter('ignore')"
       ],
-      "execution_count": 31,
+      "execution_count": 109,
       "outputs": [
         {
           "output_type": "stream",
@@ -111,7 +111,7 @@
             "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
             "[nltk_data]   Package stopwords is already up-to-date!\n",
             "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
-            "[nltk_data]   Unzipping tokenizers/punkt.zip.\n"
+            "[nltk_data]   Package punkt is already up-to-date!\n"
           ],
           "name": "stdout"
         }
@@ -124,7 +124,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "iF5jfBX8G87p",
-        "outputId": "8dbb703a-587b-4a99-9175-c897f29dd211"
+        "outputId": "adce1bde-e85e-473f-e42a-c289f3e372da"
       },
       "source": [
         "#import of Data\n",
@@ -136,7 +136,7 @@
         "print(train.head(10))\n",
         "print(test.head(10))"
       ],
-      "execution_count": 7,
+      "execution_count": 110,
       "outputs": [
         {
           "output_type": "stream",
@@ -204,7 +204,7 @@
         "data = [train,test]\n",
         "df = pd.concat(data)"
       ],
-      "execution_count": 9,
+      "execution_count": 111,
       "outputs": []
     },
     {
@@ -227,7 +227,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "EXtsORcBIiU8",
-        "outputId": "37927277-0888-48d8-d164-0a22a21a6e94"
+        "outputId": "a0b9daf6-72a5-44d2-a5d4-829e9a602f75"
       },
       "source": [
         "# Null Values \n",
@@ -235,7 +235,7 @@
         "print('Train Columns with null values:\\n', train.isnull().sum())\n",
         "print('Test Columns with null values:\\n', test.isnull().sum())"
       ],
-      "execution_count": 8,
+      "execution_count": 112,
       "outputs": [
         {
           "output_type": "stream",
@@ -265,7 +265,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "64g7GtKwJXV_",
-        "outputId": "44b560a2-326f-4865-a4b7-c79e459c2180"
+        "outputId": "0afd7c64-f646-4c3e-81ca-8b1b86381ec0"
       },
       "source": [
         "#Since there are missing values in both keyword and location, we wont drop data however we will fill in the text with no missing_per col\n",
@@ -278,7 +278,7 @@
         "print('Train Columns with null values:\\n', train.isnull().sum())\n",
         "print('Test Columns with null values:\\n', test.isnull().sum())"
       ],
-      "execution_count": 13,
+      "execution_count": 113,
       "outputs": [
         {
           "output_type": "stream",
@@ -321,7 +321,7 @@
           "height": 282
         },
         "id": "0RD84P2HKVsj",
-        "outputId": "f21ebeb8-5deb-4d9c-dccb-b5da481e0fd1"
+        "outputId": "b32a2165-75b0-4cd6-c840-a106356a03cd"
       },
       "source": [
         "#Class distribution\n",
@@ -330,7 +330,7 @@
         "sns.barplot(dis.index, dis)\n",
         "plt.gca().set_ylabel('Target')"
       ],
-      "execution_count": 16,
+      "execution_count": 114,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -342,7 +342,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 16
+          "execution_count": 114
         },
         {
           "output_type": "display_data",
@@ -366,7 +366,7 @@
           "height": 1000
         },
         "id": "6SaeWzbSNoK2",
-        "outputId": "63822452-e0a5-4412-e256-20dabcc2442b"
+        "outputId": "a37ea2cc-0c44-45d3-dc95-543c67dad0a5"
       },
       "source": [
         "# Word Distrubution\n",
@@ -391,7 +391,7 @@
         "\n",
         "train.drop(columns=['target_mean'], inplace=True)"
       ],
-      "execution_count": 17,
+      "execution_count": 115,
       "outputs": [
         {
           "output_type": "stream",
@@ -423,7 +423,7 @@
           "height": 356
         },
         "id": "EdzproRrO7KC",
-        "outputId": "a3c696c2-a257-4fa0-e52a-24af422962af"
+        "outputId": "63eebd0c-bb78-4170-dda7-aca198f628ab"
       },
       "source": [
         "# Character Count\n",
@@ -437,7 +437,7 @@
         "fig.suptitle('Characters in tweets')\n",
         "plt.show()\n"
       ],
-      "execution_count": 19,
+      "execution_count": 116,
       "outputs": [
         {
           "output_type": "display_data",
@@ -461,7 +461,7 @@
           "height": 356
         },
         "id": "VtKfY6XYRDWi",
-        "outputId": "aef68d8f-7a39-43eb-9551-f69f675584b8"
+        "outputId": "6cba2b6b-0b3e-4d58-dcd9-6b1776fb9a16"
       },
       "source": [
         "# Word Sistribution\n",
@@ -476,7 +476,7 @@
         "fig.suptitle('Words in a tweet')\n",
         "plt.show()"
       ],
-      "execution_count": 21,
+      "execution_count": 117,
       "outputs": [
         {
           "output_type": "display_data",
@@ -508,7 +508,7 @@
         "    return corpus\n",
         "\n"
       ],
-      "execution_count": 25,
+      "execution_count": 118,
       "outputs": []
     },
     {
@@ -519,7 +519,7 @@
           "height": 286
         },
         "id": "V5jH-y5MSt8I",
-        "outputId": "9a789aba-9244-47fc-9d4f-606f75cb43fc"
+        "outputId": "a7657b48-b039-4ae2-b870-999237865087"
       },
       "source": [
         "# Stop Word Distribution\n",
@@ -536,7 +536,7 @@
         "x,y=zip(*top)\n",
         "plt.bar(x,y)"
       ],
-      "execution_count": 26,
+      "execution_count": 119,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -548,7 +548,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 26
+          "execution_count": 119
         },
         {
           "output_type": "display_data",
@@ -572,7 +572,7 @@
           "height": 337
         },
         "id": "N-t1LI8-SnoJ",
-        "outputId": "d795ae66-c2e6-4bce-99e2-a1b50485d2ff"
+        "outputId": "fa87f0ec-0ba7-410c-f5a7-209e8495da04"
       },
       "source": [
         "#Special Characters and Puncuation\n",
@@ -590,7 +590,7 @@
         "x,y=zip(*dic.items())\n",
         "plt.bar(x,y)"
       ],
-      "execution_count": 27,
+      "execution_count": 120,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -602,7 +602,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 27
+          "execution_count": 120
         },
         {
           "output_type": "display_data",
@@ -660,7 +660,7 @@
         "    table=str.maketrans('','',string.punctuation)\n",
         "    return text.translate(table)"
       ],
-      "execution_count": 28,
+      "execution_count": 121,
       "outputs": []
     },
     {
@@ -675,7 +675,7 @@
         "    dfs['text'] = dfs['text'].apply(lambda x : remove_emoji(x))\n",
         "    dfs['text'] = dfs['text'].apply(lambda x : remove_punct(x))"
       ],
-      "execution_count": 29,
+      "execution_count": 122,
       "outputs": []
     },
     {
@@ -698,7 +698,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "phWGD0cbZfsC",
-        "outputId": "b81909ef-2bca-444d-bdce-2fd6fffa5e47"
+        "outputId": "38fcaf3b-feb7-44a7-e949-ec753c9f14f4"
       },
       "source": [
         "#Vector\n",
@@ -712,12 +712,12 @@
         "\n",
         "corpus=create_corpus(df)"
       ],
-      "execution_count": 34,
+      "execution_count": 123,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "100%|██████████| 10876/10876 [00:02<00:00, 3949.87it/s]\n"
+            "100%|██████████| 10876/10876 [00:02<00:00, 3834.03it/s]\n"
           ],
           "name": "stderr"
         }
@@ -726,25 +726,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "7b9FqLBfgDuy"
-      },
-      "source": [
-        "#Adds the Glove Embedding File \n",
-        "\n",
-        "from google.colab import files\n",
-        "\n"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "on9xlHFiaaXf"
       },
       "source": [
         "embedding_dict={}\n",
-        "with open('../input/glove-global-vectors-for-word-representation/glove.6B.100d.txt','r') as f:\n",
+        "with open('glove.6B.100d.txt','r') as f:\n",
         "    for line in f:\n",
         "        values=line.split()\n",
         "        word=values[0]\n",
@@ -752,7 +738,7 @@
         "        embedding_dict[word]=vectors\n",
         "f.close()"
       ],
-      "execution_count": null,
+      "execution_count": 124,
       "outputs": []
     },
     {
@@ -762,7 +748,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1LCR4UM9fEzh",
-        "outputId": "60ee994a-d13a-42c8-d573-4f932721d8da"
+        "outputId": "39850f88-ba6c-4d07-fe69-2ec6c331e1e5"
       },
       "source": [
         "maxlength = 50\n",
@@ -775,7 +761,7 @@
         "word_index=tokenizer_obj.word_index\n",
         "print('Number of unique words:',len(word_index))"
       ],
-      "execution_count": 37,
+      "execution_count": 125,
       "outputs": [
         {
           "output_type": "stream",
@@ -789,12 +775,196 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "SNrFbBlLfNvx"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SNrFbBlLfNvx",
+        "outputId": "3eaa0460-7caa-4331-a016-52ee6a627d88"
+      },
+      "source": [
+        "num_words=len(word_index)+1\n",
+        "embedding_matrix=np.zeros((num_words,100))\n",
+        "\n",
+        "for word,i in tqdm(word_index.items()):\n",
+        "    if i > num_words:\n",
+        "        continue\n",
+        "    \n",
+        "    emb_vec=embedding_dict.get(word)\n",
+        "    if emb_vec is not None:\n",
+        "        embedding_matrix[i]=emb_vec"
+      ],
+      "execution_count": 126,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "100%|██████████| 18694/18694 [00:00<00:00, 494200.19it/s]\n"
+          ],
+          "name": "stderr"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Pc2fTjdMuy4D"
+      },
+      "source": [
+        "model=Sequential()\n",
+        "\n",
+        "embedding=Embedding(num_words,100,embeddings_initializer=Constant(embedding_matrix),\n",
+        "                   input_length=maxlength,trainable=False)\n",
+        "\n",
+        "model.add(embedding)\n",
+        "model.add(SpatialDropout1D(0.2))\n",
+        "model.add(LSTM(64, dropout=0.2, recurrent_dropout=0.2))\n",
+        "model.add(Dense(1, activation='sigmoid'))\n",
+        "\n",
+        "\n",
+        "optimzer=Adam(learning_rate=1e-5)\n",
+        "\n",
+        "model.compile(loss='binary_crossentropy',optimizer=optimzer,metrics=['accuracy'])"
+      ],
+      "execution_count": 127,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6VQe_l2suzEK",
+        "outputId": "6fb3c571-ffbb-47ce-8f9f-dca91724d725"
+      },
+      "source": [
+        "model.summary()\n"
+      ],
+      "execution_count": 128,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Model: \"sequential_5\"\n",
+            "_________________________________________________________________\n",
+            "Layer (type)                 Output Shape              Param #   \n",
+            "=================================================================\n",
+            "embedding_4 (Embedding)      (None, 50, 100)           1869500   \n",
+            "_________________________________________________________________\n",
+            "spatial_dropout1d_4 (Spatial (None, 50, 100)           0         \n",
+            "_________________________________________________________________\n",
+            "lstm_4 (LSTM)                (None, 64)                42240     \n",
+            "_________________________________________________________________\n",
+            "dense_4 (Dense)              (None, 1)                 65        \n",
+            "=================================================================\n",
+            "Total params: 1,911,805\n",
+            "Trainable params: 42,305\n",
+            "Non-trainable params: 1,869,500\n",
+            "_________________________________________________________________\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UpuFuaNMwhuZ"
+      },
+      "source": [
+        "train2 = tweet_pad[:train.shape[0]]\n",
+        "testy = tweet_pad[train.shape[0]:]"
+      ],
+      "execution_count": 129,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DOEQfSMQwX4W",
+        "outputId": "33fc31f9-2f6c-41f3-bdd8-6af4efca036d"
+      },
+      "source": [
+        "X_train,X_test,y_train,y_test=train_test_split(train2,train['target'].values,test_size=0.2)\n",
+        "print('Shape of train',X_train.shape)\n",
+        "print(\"Shape of Validation \",X_test.shape)"
+      ],
+      "execution_count": 130,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Shape of train (6090, 50)\n",
+            "Shape of Validation  (1523, 50)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "c_jcadOsu9mG",
+        "outputId": "fc369fc3-f445-46d1-ec8d-1cd4709e09de"
+      },
+      "source": [
+        "history=model.fit(X_train,y_train,batch_size=4,epochs=15,validation_data=(X_test,y_test),verbose=2)\n"
+      ],
+      "execution_count": 131,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch 1/15\n",
+            "1523/1523 - 75s - loss: 0.6909 - accuracy: 0.5722 - val_loss: 0.6877 - val_accuracy: 0.5607\n",
+            "Epoch 2/15\n",
+            "1523/1523 - 71s - loss: 0.6047 - accuracy: 0.6839 - val_loss: 0.5580 - val_accuracy: 0.7466\n",
+            "Epoch 3/15\n",
+            "1523/1523 - 71s - loss: 0.5491 - accuracy: 0.7389 - val_loss: 0.5348 - val_accuracy: 0.7557\n",
+            "Epoch 4/15\n",
+            "1523/1523 - 71s - loss: 0.5268 - accuracy: 0.7568 - val_loss: 0.5197 - val_accuracy: 0.7564\n",
+            "Epoch 5/15\n",
+            "1523/1523 - 72s - loss: 0.5138 - accuracy: 0.7650 - val_loss: 0.5116 - val_accuracy: 0.7610\n",
+            "Epoch 6/15\n",
+            "1523/1523 - 71s - loss: 0.5101 - accuracy: 0.7662 - val_loss: 0.5037 - val_accuracy: 0.7663\n",
+            "Epoch 7/15\n",
+            "1523/1523 - 72s - loss: 0.5015 - accuracy: 0.7737 - val_loss: 0.4974 - val_accuracy: 0.7695\n",
+            "Epoch 8/15\n",
+            "1523/1523 - 71s - loss: 0.4940 - accuracy: 0.7773 - val_loss: 0.4934 - val_accuracy: 0.7741\n",
+            "Epoch 9/15\n",
+            "1523/1523 - 72s - loss: 0.4905 - accuracy: 0.7790 - val_loss: 0.4904 - val_accuracy: 0.7774\n",
+            "Epoch 10/15\n",
+            "1523/1523 - 72s - loss: 0.4900 - accuracy: 0.7760 - val_loss: 0.4868 - val_accuracy: 0.7794\n",
+            "Epoch 11/15\n",
+            "1523/1523 - 73s - loss: 0.4828 - accuracy: 0.7788 - val_loss: 0.4843 - val_accuracy: 0.7840\n",
+            "Epoch 12/15\n",
+            "1523/1523 - 72s - loss: 0.4807 - accuracy: 0.7856 - val_loss: 0.4828 - val_accuracy: 0.7840\n",
+            "Epoch 13/15\n",
+            "1523/1523 - 71s - loss: 0.4745 - accuracy: 0.7883 - val_loss: 0.4812 - val_accuracy: 0.7846\n",
+            "Epoch 14/15\n",
+            "1523/1523 - 72s - loss: 0.4772 - accuracy: 0.7888 - val_loss: 0.4775 - val_accuracy: 0.7866\n",
+            "Epoch 15/15\n",
+            "1523/1523 - 70s - loss: 0.4792 - accuracy: 0.7821 - val_loss: 0.4761 - val_accuracy: 0.7899\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZpFsmze8uzJG"
       },
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 131,
       "outputs": []
     }
   ]
